--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOSTNAME = rogue.db.elephantsql.com
-DB_USERNAME = mosomtxk
-DB_PASSWORD = BcZQAPXpT9q_JwibpLuBoFlyGaX__qRc
-DB_NAME = mosomtxk
+DB_HOSTNAME = localhost
+DB_USERNAME = postgres
+DB_PASSWORD = 123
+DB_NAME = mamaRecipe
 PORT = 5432
 JWT_SECRET = contoh123
