--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
+    "helmet": "^7.0.0",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "xss-clean": "^0.1.1"
   }
 }
